--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,9 @@
-html {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body { 
     background-color: rgb(250, 250, 250); 
     padding: 0;
