--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,5 +2,55 @@
     /* padding-top: 10px; */
     /* background-color: rgb(251, 251, 251); */
     font-family: 'Raleway', sans-serif;
+    /* margin: 10px; */
+    /* padding: 10px; */
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* width: 100%; */
+    height: 100vh;
+    overflow: hidden;
+    transition: all ease 400ms;
+    /* background-image: linear-gradient(to bottom, gray, white); */
 
+}
+
+.application__fixed {
+    position: relative;
+    /* z-index: 9999; */
+    /* top: 0; */
+    /* height: auto; */
+    /* border: 1px solid red; */
+    display: flex;
+    flex: 0 1;
+    padding: 10px;
+    /* background-image: linear-gradient(to bottom, gray, white); */
+
+    /* background-color: rgb(250, 250, 250);  */
+    width: 100%;
+    transition: all ease 400ms;
+
+    flex-direction: column;
+    /* width: 100%; */
+}
+
+.application__list {
+    
+    position: relative;
+    /* top: 275px; */
+    display: flex;
+    flex: 2 1;
+    /* justify-content: flex-start; */
+    overflow: scroll;
+    transition: all ease 400ms;
+
+    width: 100%;
+
+}
+
+@media screen and (min-width: 500px) {
+
+    .application__list {
+    }   
 }
