--- a/src/components/QuoteDisplay.css
+++ b/src/components/QuoteDisplay.css
@@ -1,14 +1,6 @@
 .quote-display {
-    padding: 0 !important;
+    position: relative;
     display: flex;
     align-items: center;
-    /* flex-direction: column; */
-    /* width: 100%; */
-    height: 500px;
-    border: 1px solid blue;
-    /* max-height: 100vh; */
-    /* border: 1px solid red; */
-    /* overflow: scroll; */
-
-
+    height: auto;
 }
