--- a/src/components/QuoteShowcase.css
+++ b/src/components/QuoteShowcase.css
@@ -1,23 +1,48 @@
 .showcase {
     /* border: 1px solid magenta; */
-    margin-top: 16px;
-    padding: 20px 50px;
+    /* width: 100%; */
+    /* height: 100%; */
+    width: 100%;
+    min-height: 150px;
+    margin: 10px 0 0 0;
+    padding: 10px 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(210, 252, 255, 0.401);
+    /* background-color: rgba(210, 237, 255, 0.401); */
+    background-image: linear-gradient(51deg, rgba(39, 163, 171, 1.0) 9.6%, rgba(247, 196, 174, 0.7) 48.9%);
     border-radius: 16px;
+    justify-self: center;
+    align-self: center;
+    transition: all ease 400ms;
 
 }
 
 .showcase__description {
     margin: 10px 0;
     align-self: flex-start;
-    font-size: 24px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .showcase__author {
     align-self: flex-end;
-    font-size: 16px;
+    font-size: 12px;
+}
+
+@media screen and (min-width: 500px) {
+    .showcase {
+        padding: 40px 100px;
+        min-height: 300px;
+
+    }
+
+    .showcase__description {
+        font-size: 24px;
+    }
+    
+    .showcase__author {
+        font-size: 16px;
+    }    
 }
