--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,22 +1,38 @@
 .search {
+    width: 100%;
     /* margin-top: 10px; */
     /* border: 1px solid blue; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 .search__form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
+.search__label {
+    /* margin-bottom: 10px; */
+    width: 100%;
+    display: flex;
+
+    /* background-color: orange; */
 }
 
 .search__input {
     margin: 0;
     padding: 0;
-    /* width: 100%; */
-    border: none;
-    outline: none;
-    padding: 10px;
+    width: 100%;
+    display: flex;
+    /* background-color: orange; */
+    border-radius: 10px;
+    border: 1px solid lightgray;
+    font-size: 16px;
+    /* outline: none; */
+    padding: 10px 10px;
 }
 
 .search__input:focus {
-    background-color: rgb(217, 246, 255);
+    /* background-color: rgb(217, 246, 255); */
+    border: 1px solid gray;
 }
