--- a/src/components/App.css
+++ b/src/components/App.css
@@ -40,7 +40,7 @@
     position: relative;
     /* top: 275px; */
     display: flex;
-    flex: 2 1;
+    flex: 1;
     /* justify-content: flex-start; */
     overflow: scroll;
     transition: all ease 400ms;
@@ -50,7 +50,10 @@
 }
 
 @media screen and (min-width: 500px) {
-
+    .application__fixed {
+        flex: 2 1;
+    }
     .application__list {
+        flex: 1 0;
     }   
 }
