--- a/src/components/QuoteShowcase.css
+++ b/src/components/QuoteShowcase.css
@@ -1,14 +1,13 @@
 .showcase {
-    /* border: 1px solid magenta; */
-    /* width: 100%; */
-    /* height: 100%; */
     width: 100%;
+    height: 100%;
     min-height: 150px;
     margin: 10px 0 0 0;
     padding: 10px 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* flex: 1 1; */
     align-items: center;
     /* background-color: rgba(210, 237, 255, 0.401); */
     background-image: linear-gradient(51deg, rgba(39, 163, 171, 1.0) 9.6%, rgba(247, 196, 174, 0.7) 48.9%);
@@ -19,21 +18,54 @@
 
 }
 
+.showcase__quote--content {
+    display: flex;
+    flex-direction: column;
+}
+
 .showcase__description {
+    position: relative;
     margin: 10px 0;
     align-self: flex-start;
     font-size: 16px;
     line-height: 1.5;
+    padding-left: 10px;
+}
+
+/* .showcase__icons { */
+    /* margin: 10px 5px; */
+/* } */
+
+.showcase__icons svg {
+    fill: gray;
+    transform: scale(.5);
+}
+
+.showcase__icons--start {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+
+    align-self: flex-start;
+}
+
+.showcase__icons--end {
+    position: absolute;
+    /* right: 0; */
+    bottom: 5px;
+    /* top: -10px; */
+    align-self: flex-end;
 }
 
 .showcase__author {
     align-self: flex-end;
     font-size: 12px;
+    padding-right: 10px;
 }
 
 @media screen and (min-width: 500px) {
     .showcase {
-        padding: 40px 100px;
+        padding: 40px 50px;
         min-height: 300px;
 
     }
@@ -44,5 +76,12 @@
     
     .showcase__author {
         font-size: 16px;
-    }    
+    }
+    
+    .showcase__icons--start {
+        left: -10px;
+    }
+    
+    .showcase__icons--end {
+    }
 }
