--- a/src/components/HeadingNav.css
+++ b/src/components/HeadingNav.css
@@ -1,16 +1,16 @@
 header {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 20px;
-    /* border: 1px solid blue; */
-    /* background-color: rgb(250, 250, 250); */
+
+    margin-bottom: 2rem;
 }
 
-/* header h3 {
-} */
+header h3 { 
+    font-size: 2.25rem;
+} 
 
 header p {
-    font-size: 12px;
-    margin-left: 20px;
+    font-size: 1.25rem;
+    margin-left: 2rem;
     padding-bottom: 1px;
 }
