--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body { 
     background-color: rgb(250, 250, 250); 
     padding: 0;
@@ -11,7 +15,7 @@ body {
 } 
 
 #root { 
-    /* height: 100vh; */
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
