--- a/src/components/QuoteDetail.css
+++ b/src/components/QuoteDetail.css
@@ -1,68 +1,86 @@
+button {
+    box-sizing: border-box;
+
+    margin: 0;
+    padding: 0;
+
+    border: none;
+}
+
 .list__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* margin: 16px 0; */
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+
     height: 100%;
-    padding: 0 10px;
-    
-    /* overflow-x: scroll; */
-    /* width: 100%; */
+    padding: 1rem;
+    overflow: scroll;
+    margin-bottom: 1rem;
 }
 
 .list__item {
+    display: flex;
+    flex: 1;
+
+    list-style: none;
     min-width: 100%;
-    padding: 10px;
+
+    background-color: rgb(237, 237, 237);
+    border-radius: 1rem;
+
+    cursor: pointer;
+    transition: all ease 300ms;
+}
+
+.list__item button {
     display: flex;
     flex-direction: column;
-    flex: 1 1 100px;
-    align-items: flex-end;
+    flex: 1 1 10rem;
     justify-content: space-between;
-    cursor: pointer;
-    background-color: rgb(237, 237, 237);
-    border-radius: 10px;
-    transition: all ease 300ms;
-    margin: 8px;
+
+    height: 100%;
+    padding: 1rem;
+    border-radius: inherit;
+
+    font-size: 1.4rem;
+    background-color: transparent;
     line-height: 1.5;
+
+    transition: all ease 300ms;
 }
 
-.list__item:hover {
-    background-color: rgb(255, 225, 254);
+.list__item button:hover {
+    background-color: rgb(225, 241, 255);
+
+    cursor: pointer;
     transition: all ease 300ms;
 }
+
 
 .list__description {
-    font-size: 16px;
     justify-self: flex-start;
-    margin-bottom: 10px;
+
+    margin-bottom: 1rem;
+
+    text-align: left;
+    font-family: 'Raleway', sans-serif;
 }
 
 .list__author {
-
+    align-self: flex-end;
+    font-family: 'Raleway', sans-serif;
 }
 
-@media screen and (min-width: 500px) {
-    .list__container {
-        /* width: 100%; */
-        flex-direction: row;
-        padding: 16px;
-    }
+.selected {
+    background-color: blue;
+}
 
-    .list__item {
-        /* max-width: 200px; */
-        min-width: 250px;
-        height: 100%;
-        /* padding: 10px; */
-        /* display: flex; */
-        /* flex-direction: column; */
-        /* flex: 1 1 100px; */
-        /* align-items: flex-end; */
-        /* justify-content: space-between; */
-        /* cursor: pointer; */
-        /* background-color: rgb(237, 237, 237); */
-        /* border-radius: 10px; */
-        /* transition: all ease 300ms; */
-        /* margin: 8px; */
-        /* flex: 1 0 200px; */
+@media screen and (min-width: 31.25rem) {
+    .list__container {
+        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+        grid-gap: 1rem;
+
+        width: 100%;
     }
 }
