--- a/src/components/QuoteShowcase.css
+++ b/src/components/QuoteShowcase.css
@@ -1,21 +1,34 @@
 .showcase {
-    width: 100%;
-    height: 100%;
-    min-height: 150px;
-    margin: 10px 0 0 0;
-    padding: 10px 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* flex: 1 1; */
+    flex: 1 1;
     align-items: center;
-    /* background-color: rgba(210, 237, 255, 0.401); */
-    background-image: linear-gradient(51deg, rgba(39, 163, 171, 1.0) 9.6%, rgba(247, 196, 174, 0.7) 48.9%);
-    border-radius: 16px;
     justify-self: center;
     align-self: center;
-    transition: all ease 400ms;
 
+    border-radius: 1.6rem;
+
+    width: 100%;
+    height: 100%;
+    min-height: 15rem;
+    margin: 1rem 0;
+    padding: 1rem 2.5rem;
+    
+    background-image: linear-gradient(51deg, rgba(39, 163, 171, 1.0) 9.6%, rgba(247, 196, 174, 0.7) 48.9%);
+
+    transition: all ease 400ms;
+}
+
+.showcase__error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 1rem;
+    height: 100%;
+
+    font-weight: 600;
 }
 
 .showcase__quote--content {
@@ -24,17 +37,16 @@
 }
 
 .showcase__description {
-    position: relative;
-    margin: 10px 0;
     align-self: flex-start;
-    font-size: 16px;
-    line-height: 1.5;
-    padding-left: 10px;
-}
 
-/* .showcase__icons { */
-    /* margin: 10px 5px; */
-/* } */
+    position: relative;
+
+    margin: 1rem 0;
+    padding-left: 1rem;
+
+    font-size: 1.6rem;
+    line-height: 1.5;
+}
 
 .showcase__icons svg {
     fill: gray;
@@ -43,45 +55,40 @@
 
 .showcase__icons--start {
     position: absolute;
-    top: -5px;
-    left: -5px;
+    top: -.5rem;
+    left: -.5rem;
 
     align-self: flex-start;
 }
 
 .showcase__icons--end {
-    position: absolute;
-    /* right: 0; */
-    bottom: 5px;
-    /* top: -10px; */
     align-self: flex-end;
+
+    position: absolute;
+    bottom: .5rem;
 }
 
 .showcase__author {
     align-self: flex-end;
-    font-size: 12px;
-    padding-right: 10px;
+    padding-right: 1rem;
+
+    font-size: 1.2rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 31.25rem) {
     .showcase {
-        padding: 40px 50px;
-        min-height: 300px;
-
+        min-height: 30rem;
     }
 
     .showcase__description {
-        font-size: 24px;
+        font-size: 2.4rem;
     }
     
     .showcase__author {
-        font-size: 16px;
+        font-size: 1.6rem;
     }
     
     .showcase__icons--start {
-        left: -10px;
-    }
-    
-    .showcase__icons--end {
+        left: -1rem;
     }
 }
