--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,94 +1,91 @@
 .search {
     width: 100%;
     display: flex;
-    /* margin-top: 10px; */
-    /* border: 1px solid blue; */
-    /* border-radius: 10px; */
 }
 
 .search__form {
     width: 100%;
     display: flex;
-    /* flex-direction: row; */
 }
 
 .input__container {
-    width: 100%;
     display: flex;
     flex-direction: row;
-    
-}
 
-.search__label {
-    /* margin-bottom: 10px; */
     width: 100%;
-    display: flex;
-
-    /* background-color: orange; */
 }
 
 .search__random {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    cursor: pointer;
-    border-radius: 10px;
-    /* outline: none; */
+
+    margin-left: 1rem;
+    width: 5rem;
+
+    border-radius: 1rem;
     border: none;
-    margin-left: 10px;
+
+    cursor: pointer;
 }
 
 .search__random svg {
-    transform: scale(1.75);
     fill: rgb(85, 85, 85);
+
+    transform: scale(1.75);
+    transition: all ease 300ms;
 }
 
-.search__random svg:hover {
+.search__random:hover > svg {
     fill: orange;
+    transition: all ease 300ms;
 }
 
 .search__input {
-    margin: 0;
-    padding: 0;
-    width: 100%;
     display: flex;
-    /* background-color: orange; */
-    border-radius: 10px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
 
+    margin: 0;
+    padding: 1rem 1rem;
+    width: 100%;
+
+    border-radius: 1rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     border: 1px solid lightgray;
-    font-size: 16px;
-    /* outline: none; */
-    padding: 10px 10px;
+    border-left: none;
+
+    font-size: 1.6rem;
 }
 
 .search__select {
-    border-radius: 10px;
+    padding: .5rem;
+
+    border-radius: 1rem;
     border: 1px solid lightgray;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: none;
+
     font-family: 'Raleway', sans-serif;
-    font-size: 12px;
-    padding: 5px;
+    text-align: center;
+
     transition: all ease 300ms;
-    font-weight: 400;
-    text-transform: uppercase;
+}
+
+.search__select:hover {
+    cursor: pointer;
 }
 
 .search__input:focus {
-    /* background-color: rgb(217, 246, 255); */
     border: 1px solid gray;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 31.25rem) {
     .search__select {
-        font-size: 16px;
+        font-size: 1.6rem;
         transition: all ease 300ms;
-
     }
     .search__random {
-        width: 100px;
+        width: 10rem;
     }
 }
