--- a/src/components/QuoteDetail.css
+++ b/src/components/QuoteDetail.css
@@ -17,6 +17,7 @@ button {
     padding: 1rem;
     overflow: scroll;
     margin-bottom: 1rem;
+    scrollbar-width: none;
 }
 
 .list__item {
@@ -28,9 +29,12 @@ button {
 
     background-color: rgb(237, 237, 237);
     border-radius: 1rem;
+    border: 2px solid transparent;
 
     cursor: pointer;
     transition: all ease 300ms;
+
+    /* box-shadow: 0 0 .5rem gray; */
 }
 
 .list__item button {
@@ -57,6 +61,10 @@ button {
     transition: all ease 300ms;
 }
 
+.list__item button:focus {
+    box-shadow: 0 0 .5rem black;
+}
+
 
 .list__description {
     justify-self: flex-start;
@@ -72,15 +80,12 @@ button {
     font-family: 'Raleway', sans-serif;
 }
 
-.selected {
-    background-color: blue;
-}
-
 @media screen and (min-width: 31.25rem) {
     .list__container {
         grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
         grid-gap: 1rem;
-
+        padding: 1rem 0;
         width: 100%;
+        overflow: none;
     }
 }
