--- a/src/components/QuoteDetail.css
+++ b/src/components/QuoteDetail.css
@@ -14,9 +14,9 @@ button {
     grid-gap: 1rem;
 
     height: 100%;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
     overflow: scroll;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     scrollbar-width: none;
 }
 
@@ -84,8 +84,24 @@ button {
     .list__container {
         grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
         grid-gap: 1rem;
-        padding: 1rem 0;
+        /* padding: 0 0 1rem 0; */
+        margin: 1rem 0;
         width: 100%;
         overflow: none;
     }
+
+    .list__container::-webkit-scrollbar {
+        width: 3px;
+        height: 0;
+        padding-left: 5px;
+    }
+
+    .list__container::-webkit-scrollbar-thumb {
+        background-color: lightgray;
+        border-radius: 10px;
+    }
+
+    /* .list__container::-webkit-scrollbar-thumb {
+        background-color: navy;
+    } */
 }
